[package]
name = "did-onion"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2018"

[features]
tor-tests = []

[dependencies]
ssi = { path = "../", default-features = false }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "socks"] }
http = "0.2"
serde_json = "1.0"

[target.'cfg(target_os = "android")'.dependencies.reqwest]
version = "0.11"
features = ["json", "native-tls-vendored"]

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.9", features = ["attributes"] }
futures = "0.3"
hyper = { version = "0.14", features = ["server", "client", "http1", "stream"] }
#TODO: socks5-async = "0.1.4"
