[package]
name = "did-onion"
version = "0.2.1"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
keywords = ["ssi", "did", "tor", "onion"]
description = "did:onion DID method, using the ssi crate"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-onion/"
documentation = "https://docs.rs/did-onion/"

[dependencies]
ssi-dids = { path = "../ssi-dids", version = "0.1", default-features = false }
ssi-jwk = { path = "../ssi-jwk", version = "0.1" }
async-trait = "0.1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "socks"] }
http = "0.2"
serde_json = "1.0"

[target.'cfg(target_os = "android")'.dependencies.reqwest]
version = "0.11"
features = ["json", "native-tls-vendored"]

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
async-std = { version = "1.9", features = ["attributes"] }
futures = "0.3"
hyper = { version = "0.14", features = ["server", "client", "http1", "stream"] }
#TODO: socks5-async = "0.1.4"
