[package]
name = "did-pkh"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2018"
license = "Apache-2.0"
keywords = ["ssi", "did"]
categories = ["cryptography"]
description = "did:pkh DID method, using the ssi crate"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-pkh/"
documentation = "https://docs.rs/did-pkh/"

[dependencies]
ssi = { version = "0.3", path = "../", default-features = false, features = ["secp256k1", "keccak-hash", "secp256r1", "ripemd160"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
bs58 = { version = "0.4", features = ["check"] }
bech32 = "0.8"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt"] }
hex = "0.4"
blake2b_simd = "0.5"
