[package]
name = "ssi-did-resolve"
version = "0.1.0"
authors = ["Charles E. Lehner <charles.lehner@spruceid.com>"]
edition = "2018"

[dependencies]
ssi = { path = "../" }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["macros", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "0.13"
hyper-tls = "0.4"
http = "0.2"
async-trait = "0.1"
percent-encoding = "2.1"
serde_urlencoded = "0.7"
