[package]
name = "did-sol"
version = "0.0.1"
authors = ["Spruce Systems, Inc."]
edition = "2018"
license = "Apache-2.0"
keywords = ["ssi", "did", "solana"]
categories = ["cryptography::cryptocurrencies"]
description = "did:sol (Solana) DID method, using the ssi crate"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-sol/"
documentation = "https://docs.rs/did-sol/"

[dependencies]
ssi = { version = "0.4", path = "../", default-features = false, features = [] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
bs58 = { version = "0.4", features = ["check"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros"] }
