[package]
name = "did-sol"
version = "0.0.3"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
keywords = ["ssi", "did", "solana"]
categories = ["cryptography::cryptocurrencies"]
description = "did:sol (Solana) DID method, using the ssi crate"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-sol/"
documentation = "https://docs.rs/did-sol/"

[dependencies]
ssi-dids = { path = "../ssi-dids", version = "0.1" }
ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false }
ssi-caips = { path = "../ssi-caips", version = "0.1", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
bs58 = { version = "0.4", features = ["check"] }

[dev-dependencies]
ssi-vc = { path = "../ssi-vc", default-features = false }
ssi-ldp = { path = "../ssi-ldp", default-features = false, features = ["tezos", "w3c", "solana"] }
ssi-core = { path = "../ssi-core", default-features = false }
ssi-json-ld = { path = "../ssi-json-ld", default-features = false }
tokio = { version = "1.0", features = ["macros"] }
