[package]
name = "ssi-did-test"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2018"
license = "Apache-2.0"
description = "did-test-suite test vector generator"
publish = false

[dependencies]
ssi = { version = "0.3", path = "../" }
did-method-key = { version = "0.1", path = "../../ssi/did-key", features = ["secp256k1", "secp256r1"] }
did-tz = { version = "0.1", path = "../../ssi/did-tezos", default-features = false, features = ["secp256k1", "secp256r1"] }
did-pkh = { version = "0.1", path = "../../ssi/did-pkh" }
did-sol = { version = "0.0.1", path = "../../ssi/did-sol" }
did-web = { version = "0.1", path = "../../ssi/did-web" }
did-webkey = { version = "0.1", path = "../../ssi/did-webkey", features = ["p256"] }
did-onion = { version = "0.1", path = "../../ssi/did-onion" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12"
async-std = { version = "1.9", features = ["attributes"] }
