[package]
name = "ssi-did-test"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
description = "did-test-suite test vector generator"
publish = false

[dependencies]
ssi = { version = "0.4", path = "../" }
did-method-key = { version = "0.1", path = "../did-key", features = ["secp256k1", "secp256r1"] }
did-tz = { version = "0.1", path = "../did-tezos", default-features = false, features = ["secp256k1", "secp256r1"] }
did-pkh = { version = "0.1", path = "../did-pkh" }
did-sol = { version = "0.0.1", path = "../did-sol" }
did-web = { version = "0.1", path = "../did-web" }
did-webkey = { version = "0.1", path = "../did-webkey" }
did-onion = { version = "0.1", path = "../did-onion" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12"
async-std = { version = "1.9", features = ["attributes"] }
