[package]
name = "did-tz"
version = "0.2.1"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
keywords = ["ssi", "did", "tezos"]
categories = ["cryptography::cryptocurrencies"]
description = "did:tz Tezos DID method, using the ssi crate"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-tezos/"
documentation = "https://docs.rs/did-tezos/"

[dependencies]
ssi-dids = { path = "../ssi-dids", version = "0.1" }
# TODO Enabling the tezos feature all the time as it is gating the blakesig stuff in ssi_jwk
ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false, features = ["tezos"] }
ssi-jws = { path = "../ssi-jws", version = "0.1", default-features = false }
ssi-core = { path = "../ssi-core", version = "0.1" }
chrono = { version = "0.4" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0.33"
json-patch = "0.2.6"
bs58 = { version = "0.4", features = ["check"] }
url = "2.2.1"

[target.'cfg(target_os = "android")'.dependencies.reqwest]
version = "0.11"
features = ["json", "native-tls-vendored"]

[dev-dependencies]
ssi-vc = { path = "../ssi-vc", default-features = false }
ssi-core = { path = "../ssi-core", default-features = false }
ssi-ldp = { path = "../ssi-ldp", default-features = false, features = ["tezos"] }
ssi-json-ld = { path = "../ssi-json-ld", default-features = false }
ssi-tzkey = { path = "../ssi-tzkey", default-features = false }
tokio = { version = "1.0", features = ["macros"] }
wiremock = "0.5"
