[package]
name = "did-webkey"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2018"
license = "Apache-2.0"
keywords = ["ssi", "did"]
categories = ["web-programming::http-client"]
description = "did:webkey DID method, using the ssi crate"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-webkey/"
documentation = "https://docs.rs/did-webkey/"

[features]
default = ["sequoia-openpgp/crypto-nettle"]
crypto-cng = ["sequoia-openpgp/crypto-cng"]
crypto-nettle = ["sequoia-openpgp/crypto-nettle"]
p256 = ["ssi/p256"]

[dependencies]
ssi = { version = "0.3", path = "../", features = [
    "rand",
    "ring",
    "p256",
], default-features = false }
anyhow = "1.0.52"
async-trait = "0.1.52"
reqwest = { version = "0.11.9", features = ["json"] }
hex = "0.4.3"
http = "0.2.6"
serde_json = "1.0.75"
serde = { version = "1.0.134", features = ["derive"] }
sshkeys = "0.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sequoia-openpgp = { version = "1.7.0", features = [
    "compression-deflate",
], default-features = false, optional = true }
# HACK: temp, point to crates once pgp publishes a version that doesn't require zeroize=1.3.0
pgp = { git = "https://github.com/rpgp/rpgp", rev = "21081b6aaaaa5750ab937cfef30bae879a740d23", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
# HACK: same thing as above
pgp = { git = "https://github.com/rpgp/rpgp", rev = "21081b6aaaaa5750ab937cfef30bae879a740d23", features = [
    "wasm",
] }

[target.'cfg(target_os = "android")'.dependencies.reqwest]
version = "0.11.9"
features = ["json", "native-tls-vendored"]

[dev-dependencies]
tokio = { version = "1.15.0", features = ["macros"] }
async-std = { version = "1.10.0", features = ["attributes"] }
futures = "0.3.19"
hyper = { version = "0.14.16", features = ["server", "client", "http1", "stream"] }
