[package]
name = "did-webkey"
version = "0.2.2"
authors = ["Spruce Systems, Inc."]
edition = "2021"
license = "Apache-2.0"
keywords = ["ssi", "did"]
categories = ["web-programming::http-client"]
description = "did:webkey DID method, using the ssi crate"
repository = "https://github.com/spruceid/ssi/"
homepage = "https://github.com/spruceid/ssi/tree/main/did-webkey/"
documentation = "https://docs.rs/did-webkey/"

[features]
default = ["secp256r1"]
secp256r1 = ["ssi-ssh/secp256r1", "ssi-jwk/secp256r1"]

[dependencies]
ssi-dids = { version = "0.1", path = "../ssi-dids" , features = ["http"] }
ssi-jwk = { version = "0.1", path = "../ssi-jwk" , default-features = false }
ssi-ssh = { version = "0.1", path = "../ssi-ssh" }
anyhow = "1.0.52"
async-trait = "0.1.52"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4.3"
http = "0.2.6"
serde_json = "1.0.75"
serde = { version = "1.0.134", features = ["derive"] }
sshkeys = "0.3.1"
pgp = "0.10.0"


[target.'cfg(target_os = "android")'.dependencies.reqwest]
version = "0.11.9"
features = ["json", "native-tls-vendored"]

[dev-dependencies]
env_logger = "0.10"
test-log = "0.2.11"
pretty_assertions = "1.3"
tokio = { version = "1.15.0", features = ["macros"] }
async-std = { version = "1.10.0", features = ["attributes"] }
futures = "0.3.19"
hyper = { version = "0.14.16", features = [
    "server",
    "client",
    "http1",
    "stream",
] }
