[package]
name = "jwk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
simple_asn1 = "^0.5.2"
zeroize = { version = "1.4", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
ssi-crypto = { path = "../crypto", default-features = false }
