[package]
name = "ssi-caips"
version = "0.1.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "Apache-2.0"
description = "Implementation of CAIPS for the ssi library."
repository = "https://github.com/spruceid/ssi/"
documentation = "https://docs.rs/ssi-caips/"

[features]
default = ["eip", "ripemd-160", "ssi-jwk/secp256k1"]
eip = ["ssi-jwk/eip"]
ripemd-160 = ["ssi-jwk/ripemd-160"]
aleo = ["ssi-jwk/aleo", "bech32"]
tezos = ["ssi-jwk/tezos"]

[dependencies]
thiserror = "1"
ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false }
bs58 = { version = "0.4", features = ["check"] }
bech32 = { version = "0.8", optional = true }

[dev-dependencies]
serde_json = "1.0"
async-std = { version = "1.9", features = ["attributes"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
