[package]
name = "ssi-cborld"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-recursion = "1.0"
async-std = { version = "1.9", features = ["attributes"] }
base64 = "0.12"
bincode = "1.3.3"
bs58 = { version = "0.4", features = ["check"] }
combination = "0.1"
futures = "0.3"
iref = "^2.0.3"
json = "^0.12"
json-ld = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11.7"
serde_cbor = "0.11.2"
serde_derive = "1.0.139"
serde_jcs = "0.1"
serde_json = "1.0"
ssi-contexts = { version = "0.1.3", path = "../contexts/" }
ssi-crypto = { path = "../ssi-crypto", version = "0.1" }
ssi-json-ld = { path = "../ssi-json-ld", version = "0.1" }
thiserror = "1.0"
uuid = "0.8.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[dev-dependencies]
difference = "2.0"
hex = "0.4"
