[package]
name = "ssi-core"
version = "0.1.0"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "Apache-2.0"
description = "Core types and traits for the ssi library."
repository = "https://github.com/spruceid/ssi/"
documentation = "https://docs.rs/ssi-core/"

[dependencies]
thiserror = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
