[package]
name = "ssi-dids"
version = "0.1.1"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "Apache-2.0"
description = "Core types and traits for DIDs for the ssi library."
repository = "https://github.com/spruceid/ssi/"
documentation = "https://docs.rs/ssi-dids/"

[features]
http = ["reqwest", "percent-encoding"]
example = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
async-trait = "0.1"
thiserror = "1.0"
anyhow = "1.0"
derive_builder = "0.9"
bs58 = { version = "0.4", features = ["check"] }
hex = "0.4"
multibase = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"], optional = true }
percent-encoding = { version = "2.1", optional = true }
iref = { version = "2.2.2", features = ["serde"] }
static-iref = "2.0.0"
ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false }
ssi-json-ld = { path = "../ssi-json-ld", version = "0.2" }
ssi-core = { path = "../ssi-core", version = "0.1"}
ssi-caips = { path = "../ssi-caips", version = "0.1", default-features = false  }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

[dev-dependencies]
async-std = { version = "1.9", features = ["attributes"] }
tokio = { version = "1.15", features = ["macros"] }
futures = "0.3"
hyper = { version = "0.14", features = [
    "server",
    "client",
    "http1",
    "stream",
] }
ssi-jwk = { path = "../ssi-jwk", version = "0.1", default-features = false, features = ["secp256k1", "ed25519"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
