[package]
name = "ssi-json-ld"
version = "0.2.2"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "Apache-2.0"
description = "Implementation of JSON-LD algorithms for the ssi library."
repository = "https://github.com/spruceid/ssi/"
documentation = "https://docs.rs/ssi-json-ld/"

[dependencies]
thiserror = "1.0"
async-std = { version = "1.9", features = ["attributes"] }
json-ld.workspace = true
iref.workspace = true
static-iref.workspace = true
rdf-types.workspace = true
locspan.workspace = true
json-syntax = "0.9"
futures = "0.3"
lazy_static = "1.4"
combination = "0.1"
grdf.workspace = true
ssi-contexts = { version = "0.1.5", path = "../contexts/" }
ssi-crypto.workspace = true
ssi-rdf.workspace = true

[dev-dependencies]
difference = "2.0"
nquads-syntax.workspace = true
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["rt", "macros"] }
