[package]
name = "ssi-json-ld"
version = "0.2.2"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "Apache-2.0"
description = "Implementation of JSON-LD algorithms for the ssi library."
repository = "https://github.com/spruceid/ssi/"
documentation = "https://docs.rs/ssi-json-ld/"

[dependencies]
thiserror = "1.0"
async-std = { version = "1.9", features = ["attributes"] }
json-ld = "0.12.1"
iref = "^2.0.3"
static-iref = "2"
rdf-types = "0.12.15"
locspan = "0.7.13"
json-syntax = "0.9"
futures = "0.3"
lazy_static = "1.4"
combination = "0.1"
grdf = "0.16.2"
hex = "0.4"
ssi-contexts = { version = "0.1.5", path = "../contexts/" }
ssi-crypto = { path = "../ssi-crypto", version = "0.1" }

[dev-dependencies]
difference = "2.0"
nquads-syntax = "0.10.0"
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["rt", "macros"] }
