[package]
name = "ssi-jwk"
version = "0.1.0"
edition = "2021"

[features]
default = ["secp256k1", "secp256r1", "aleosig", "ed25519"]
# default = ["ring"]
secp256k1 = ["k256", "rand", "k256/keccak256", "ssi-crypto/sha2", "ssi-crypto/secp256k1"]
secp256r1 = ["p256", "rand"]
ed25519 = ["ed25519-dalek", "rand_old"]
aleosig = ["rand", "blake2", "snarkvm-dpc",  "snarkvm-algorithms", "snarkvm-curves", "snarkvm-utilities", "snarkvm-parameters", "bs58"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4"
simple_asn1 = "^0.5.2"
zeroize = { version = "1.4", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.12"
thiserror = "1.0"
ssi-crypto = { path = "../ssi-crypto" }
k256 = { version = "0.9.6", optional = true, features = ["zeroize", "ecdsa"] }
p256 = { version = "0.9.0", optional = true, features = ["zeroize", "ecdsa"] }
openssl = { version = "0.10", optional = true }
ring = { version = "0.16", optional = true }
rsa = { version = "0.3", optional = true }
rand = { version = "0.8", optional = true }
rand_old = { package = "rand", version = "0.7", optional = true }
ed25519-dalek = { version = "1", optional = true }
lazy_static = "1.4"
bs58 = { version = "0.4", features = ["check"], optional = true }
blake2 = { version = "0.9", optional = true }
snarkvm-dpc = { version = "0.7.9", optional = true }
snarkvm-algorithms = { version= "0.7.9", optional = true }
snarkvm-curves = { version= "0.7.9", optional = true }
snarkvm-utilities = { version = "0.7.9", optional = true }
snarkvm-parameters = { version = "0.7.9", optional = true }
