[package]
name = "ssi-jwk"
version = "0.1.2"
edition = "2021"
authors = ["Spruce Systems, Inc."]
license = "Apache-2.0"
description = "Implementation of JWK for the ssi library."
repository = "https://github.com/spruceid/ssi/"
documentation = "https://docs.rs/ssi-jwk/"

[features]
default = ["secp256k1", "secp256r1", "ed25519", "rsa", "eip", "ripemd-160"]
## enable secp256k1 keys
secp256k1 = ["k256", "rand", "ssi-crypto/secp256k1"]
## enable secp256r1 (p256) keys
secp256r1 = ["p256", "rand"]
## enable secp384r1 (p384) keys
secp384r1 = ["p384", "rand"]
## enable ed25519 (EdDSA) keys
ed25519 = ["ed25519-dalek", "rand", "getrandom"]
## enable RSA keys
rsa = ["dep:rsa"]

## enable aleo ecosystem keys
aleo = [
  "rand",
  "blake2",
  "snarkvm-dpc",
  "snarkvm-algorithms",
  "snarkvm-curves",
  "snarkvm-utilities",
  "snarkvm-parameters",
  "bs58",
]
## enable ripemd-160 hashing for keys, e.g. for bitcoin
ripemd-160 = ["ssi-crypto/ripemd-160", "secp256k1"]
## enable ethereum style key hashing
eip = ["ssi-crypto/keccak", "secp256k1"]
## enable tezos style key hashing
tezos = ["blake2b_simd", "secp256k1", "secp256r1", "bs58"]

ring = ["dep:ring"]

[dependencies]
# todo make bbs optional based on bbs feature
bbs = { version = "0.4" }
num-bigint = "0.4"
simple_asn1 = "^0.5.2"
zeroize = { version = "1.5", features = ["zeroize_derive"] }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.12"
thiserror = "1.0"
ssi-crypto = { path = "../ssi-crypto", version = "0.1" }
k256 = { version = "0.13.1", optional = true, features = ["ecdsa"] }
p256 = { version = "0.13.2", optional = true, features = ["ecdsa"] }
p384 = { version = "0.13.0", optional = true, features = ["ecdsa"] }
ring = { version = "0.16", optional = true }
rsa = { version = "0.6", optional = true }
rand = { version = "0.8", optional = true }
ed25519-dalek = { version = "2.0.0", optional = true, features = ["rand_core"] }
lazy_static = "1.4"
bs58 = { version = "0.4", features = ["check"], optional = true }
blake2 = { version = "0.9", optional = true }
snarkvm-dpc = { version = "0.7.9", optional = true }
snarkvm-algorithms = { version = "0.7.9", optional = true }
snarkvm-curves = { version = "0.7.9", optional = true }
snarkvm-utilities = { version = "0.7.9", optional = true }
snarkvm-parameters = { version = "0.7.9", optional = true }
blake2b_simd = { version = "0.5", optional = true }
multibase = "0.9.1"
unsigned-varint = "0.7.1"
num-traits = "0.2"
num-derive = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"], optional = true }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
serde_json = "1.0"
hex = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
